public/stylesheets/project.css
@media(min-width:768px) {
    header .container {
        padding-top: 200px;
        padding-bottom: 100px;
    }

    header .intro-text .name {
        font-size: 4.75em;
    }

    header .intro-text .skills {
        font-size: 1.75em;
    }
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 25px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        padding: 10px 0;
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 1.5em;
    }
}

.navbar {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

/* header */

header {
    text-align: center;
    color: #fff;
    background: #ffcd69;
}

header .container {
    padding-top: 100px;
    padding-bottom: 50px;
}

header img {
    display: block;
    margin: 0 auto 20px;
}

header .intro-text .name {
    display: block;
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 2em;
    font-weight: 700;
}

header .intro-text .skills {
    font-size: 1.25em;
    font-weight: 300;
}

@media(min-width:768px) {
    header .container {
        padding-top: 200px;
        padding-bottom: 100px;
    }

    header .intro-text .name {
        font-size: 4.75em;
    }

    header .intro-text .skills {
        font-size: 1.75em;
    }
}

/*pop up vote*/
.pop{
    font-family:sans-serif;
    width:100%;
    height:100%;
    margin:0;
    padding: 0;
    padding-top: 3em;
    position: relative;
    text-align:center;
}

#openPopUp{
    text-align:center;
    background-color: #1abc9c;
    padding: 15px 15px;
    color: #ffffff;
    font-weight: 500;
    font-size: 1.5em;
    border-radius: 3.5px;
    text-decoration: none;

    transition:background-color 0.15s linear;
    -webkit-transition:background-color 0.15s linear;
    -moz-transition:background-color 0.25s linear;
    -o-transition:background-color 0.25s linear;
}
a#openPopUp:hover{
    cursor: pointer;
    background-color: #16a085;
}
.popup{
    position: fixed;
    top: -100vh;
    left: 0;
    z-index: 9999999;
    background: rgba(0,0,0, 0.75);
    width: 100vw;
    height: 100vh;
    opacity: 0;

    -webkit-transition: opacity  0.35s ease;
    -moz-transition: opacity 0.35s ease;
    -o-transition: opacity 0.35s ease;
    transition: opacity 0.35s ease;
}
.popup .popUpContainer{
    width: 100%;
    max-width: 700px;
    position: fixed;  /*To avoid scroll to target*/
    left: 50%;
    top: -100vh;

    -webkit-transition: top  0.35s ease;
    -moz-transition: top 0.35s ease;
    -o-transition: top 0.35s ease;
    transition: top 0.35s ease;

     /*Trick to properly center the element by using negative*/
    /*1/2 length of element as margin left and top*/
    margin-left: -250px;
    background-color: #ffffff;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    border-radius: 2px;
    z-index: 9999999;
}
.popup h2{
    padding: 0.5em;
    text-align: center;
    color: #444444;
    margin: 0;
}
.popup img{
    width: 100%;
    display: block;
}
.popup article{
    height: 600px;
    /*background-color: #a9a9a9;*/
    overflow: scroll;
}
 /*The cancel button on popup dialog*/
.popup a.closePopUp{
    font-family: verdana;
    color: #e74c3c;
    position: absolute;
    top: 0.2em;
    right: 0.375em;
    margin: 0;
    padding: 5px;
    font-weight: bold;
    font-size: 1.5em;
    text-decoration: none;
}
 /*The cancel button on popup dialog*/
.popup a:hover{
    color: #c0392b;
}
 /*When popup is targeted, by clicking on link with #popup in HTML*/
.popup:target{
    opacity: 1;
    top: 0;
}
.popup .closePopUpOutSide{
    position: absolute;
    left:0;
    width: 100%;
    height: 100%;
    z-index: 9999991;
}
.popup:target .popUpContainer{
    top: 50px;
    -webkit-transition: top  0.35s ease;
    -moz-transition: top 0.35s ease;
    -o-transition: top 0.35s ease;
    transition: top 0.35s ease;
}

@media  (max-width: 796px) {
    .popup .popUpContainer{
        width: 90%;
        max-width: none;
        left: 5%;
        margin-left: 0;
    }
    .popup ul{
        padding: 0 1em 0 1em;
    }
    .popup:target .popUpContainer{
        top: 25px;
        -webkit-transition: top  0.35s ease;
        -moz-transition: top 0.35s ease;
        -o-transition: top 0.35s ease;
        transition: top 0.35s ease;
    }
}

/*voting*/
#header {
    background-color: lightcoral;
    text-align:center;
}
#score{
    width: 100%;
}
#submit2{
    /*background-color: #a28f79;*/
    width: 40%;
}

.rating {
    overflow: hidden;
    display: inline-block;
    padding:1.5em;

}
.rating-input {
    position: absolute;
    left: 0;
    top: -50px;
}

.rating:hover .rating-star:hover,
.rating:hover .rating-star:hover ~ .rating-star,
.rating-input:checked ~ .rating-star {
    background-position: 0 0;
}
.rating-star,
.rating:hover .rating-star {
    position: relative;
    float: right;
    display: block;
    width: 100px;
    height: 100px;
    background: url('../images/star.png') 0 -100px;
}

/** Header */
.masthead-brand {
    margin-top: 10px;
    margin-bottom: 10px;
}

.masthead-nav > li {
    display: inline-block;
}

.masthead-nav > li + li {
    margin-left: 20px;
}
.masthead-nav > li > a {
    padding-right: 0;
    padding-left: 0;
    font-size: 16px;
    font-weight: bold;
    color: #fff;
    color: rgba(255,255,255,.75);
    border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
    background-color: transparent;
    border-bottom-color: #a9a9a9;
    border-bottom-color: rgb(220,220,220);
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
    color: #666;
    border-bottom-color: #666;
}



/*edit pop up*/
.editPop{
    font-family:sans-serif;
    width:100%;
    height:100%;
    margin:0;
    padding: 0;
    padding-top: 3em;
    position: relative;
    text-align:center;
}

#openPopUpEdit{
    text-align:center;
    background-color: #1abc9c;
    padding: 15px 15px;
    color: #ffffff;
    font-weight: 500;
    font-size: 1.5em;
    border-radius: 3.5px;
    text-decoration: none;

    transition:background-color 0.15s linear;
    -webkit-transition:background-color 0.15s linear;
    -moz-transition:background-color 0.25s linear;
    -o-transition:background-color 0.25s linear;
}
a#openPopUpEdit:hover{
    cursor: pointer;
    background-color: #16a085;
}
.popupEdit{
    position: fixed;
    top: -100vh;
    left: 0;
    z-index: 9999999;
    background: rgba(0,0,0, 0.75);
    width: 100vw;
    height: 100vh;
    opacity: 0;

    -webkit-transition: opacity  0.35s ease;
    -moz-transition: opacity 0.35s ease;
    -o-transition: opacity 0.35s ease;
    transition: opacity 0.35s ease;
}
.popupEdit .popUpContainerEdit{
    width: 100%;
    max-width: 400px;
    position: fixed; /* To avoid scroll to target */
    left:50%;
    /*top:50%;*/
    /*transform: translateX(-50%) translateY(-50%);*/
    top: -100vh;
    -webkit-transition: top  0.35s ease;
    -moz-transition: top 0.35s ease;
    -o-transition: top 0.35s ease;
    transition: top 0.35s ease;

    /* Trick to properly center the element by using negative
    1/2 length of element as margin left and top */
    margin-left: -250px;
    background-color: #ffffff;
    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    box-shadow: 0 1px 2px rgba(0,0,0,0.1);
    border-radius: 2px;
    z-index: 9999999;
}
.popupEdit h2{
    padding: 0.5em;
    text-align: center;
    color: #444444;
    margin: 0;
}
.popupEdit img{
    width: 100%;
    display: block;
}
.popupEdit article{
    height: 300px;
}
/* The cancel button on popup dialog */
.popupEdit a.closePopUpEdit{
    font-family: verdana;
    color: #e74c3c;
    position: absolute;
    top: 0.2em;
    right: 0.375em;
    margin: 0;
    padding: 5px;
    font-weight: bold;
    font-size: 1.5em;
    text-decoration: none;
}
/* The cancel button on popup dialog */
.popupEdit a:hover{
    color: #c0392b;
}
/* When popup is targeted, by clicking on link with #popup in HTML */
.popupEdit:target{
    opacity: 1;
    top: 0;
}
.popupEdit .closePopUpOutSideEdit{
    position: absolute;
    left:0;
    width: 100%;
    height: 100%;
    z-index: 9999991;
}
.popupEdit:target .popUpContainerEdit{
    top:20%;
    -webkit-transition: top  0.35s ease;
    -moz-transition: top 0.35s ease;
    -o-transition: top 0.35s ease;
    transition: top 0.35s ease;
}

@media  (max-width: 796px) {
    .popupEdit .popUpContainerEdit{
        width: 90%;
        max-width: none;
        left: 5%;
        margin-left: 0;
    }
    .popupEdit ul{
        padding: 0 1em 0 1em;
    }
    .popupEdit:target .popUpContainerEdit{
        top: 25px;
        -webkit-transition: top  0.35s ease;
        -moz-transition: top 0.35s ease;
        -o-transition: top 0.35s ease;
        transition: top 0.35s ease;
    }
}

.wrap{
    padding-top: 2em;
}

#submit{
    width: 40%;
}


/* star */
hr.star-light:after {
    color: #fff;
    background-color: #ffcd69;
}

